Cleaned up code residues and files, and fixed .middle gap that's showing up on Windows

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                    
                 </div>
             
-                <!-- <video class="hero-video" src="Assets/Videos/production ID 4514413.mp4" alt="Someone showcasing their wings"> -->
-                <video class="hero-video" src="Assets/Videos/production ID 4514413.mp4" autoplay loop alt="Someone showcasing their wings">
+                <video class="hero-video" src="Assets/Videos/production ID 4514413.mp4" alt="Someone showcasing their wings" autoplay loop>
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -88,7 +87,7 @@
                         </div>
                     </div>
 
-                    <img class="clouds" src="Assets/Images/clouds-purple-edit1.jpg" alt="Clouds">
+                    <img class="clouds" src="Assets/Images/clouds.jpg" alt="Clouds">
                 </div>
             <div class="cta-meta-container">
                 <div class="call-to-action-container">
