Video playing issue fix on Chrome

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                    
                 </div>
             
-                <video class="hero-video" src="Assets/Videos/production ID 4514413.mp4" alt="Someone showcasing their wings" muted autoplay loop>
+                <video class="hero-video" src="Assets/Videos/production ID 4514413.mp4" alt="Someone showcasing their wings" autoplay loop muted>
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -76,7 +76,8 @@
             </div>
                 <div class="quote-and-clouds">
                     <div class="quote-container">
-                        <p class="quote">All censorships exist to prevent anyone from challenging current
+                        <p class="quote">
+                            All censorships exist to prevent anyone from challenging current
                             conceptions and existing institutions. All progress is initiated by
                             challenging current conceptions, and executed by supplanting existing
                             institutions. Consequently, the first condition of progress is the 
@@ -91,7 +92,11 @@
                 <div class="call-to-action-container">
                     <div class="non-button-text-container">   
                         <h3 class="final-title">Call to action! It's time!</h3>
-                        <p class="final-subtext">Register for an appointment to get your own pair of wings back by clicking that button right over there!</p>
+                        <p class="final-subtext">
+                            Register for an appointment to get your 
+                            own pair of wings back by clicking that button 
+                            right over there!
+                        </p>
                     </div>
                     <form action="index.html">
                         <button class="final-button">Register</button>
