Video autoplay issue fix on Chrome

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             
                 <video class="hero-video" src="Assets/Videos/production ID 4514413.mp4" alt="Someone showcasing their wings" autoplay loop muted>
-                    Your browser does not support the video tag.
+                    Your browser does not support the video tag. Please consider a modern browser.
                 </video>
             </div>
 
